--- a/assets/Scss/abstracts/_variable.scss
+++ b/assets/Scss/abstracts/_variable.scss
@@ -17,6 +17,7 @@ $font-sizes: (fs-13: 13px, fs-14: 14px, fs-15: 15px, fs-16: 16px, fs-17: 17px, f
 $font-weights: (fw-2: 200, fw-3: 300, fw-4: 400, fw-5: 500, fw-6: 600, fw-7: 700, fw-8: 800);
 $text-aligns: (text-center: center, text-left: left, text-right: right);
 $text-transforms: (text-uppercase: uppercase, text-lowercase: lowercase, text-capitalize: capitalize);
+$breakpoints: ();
 
 /* <========== Fonts ========> */
 $font-nunitoSans: 'Nunito Sans',
