--- a/assets/Scss/pages/resume.scss
+++ b/assets/Scss/pages/resume.scss
@@ -5,9 +5,9 @@
 @import "../components/buttons";
 @import "../components/labels";
 @import "../components/inputs";
-@import "../layout/footer";
+@import "../components/footer";
+@import "../components/nav-bar";
 @import "../layout/header";
-@import "../layout/nav-bar";
 @import "../layout/cv-form-block";
 @import "../layout/cv-form-header";
 @import "../layout/cv-preview";
