--- a/assets/Scss/base/_reset.scss
+++ b/assets/Scss/base/_reset.scss
@@ -14,6 +14,10 @@ html {
 body {
     font-size: 1.6rem;
     font-family: $font-nunitoSans;
+
+    @include print {
+        visibility: hidden;
+    }
 }
 
 button {
