--- a/assets/Scss/layout/_cv-form-block.scss
+++ b/assets/Scss/layout/_cv-form-block.scss
@@ -23,9 +23,27 @@
         margin-bottom: 1rem;
         position: relative;
 
+        @include laptop {
+            padding: 3rem 3rem 0rem 3rem;
+        }
+
         .cols-3,
         .cols-2 {
             display: grid;
+        }
+
+        .cols-3 {
+            @include tablet {
+                grid-template-columns: repeat(3, 1fr);
+                column-gap: 2rem;
+            }
+        }
+
+        .cols-2 {
+            @include tablet {
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: 2rem;
+            }
         }
 
         .form-element {
