--- a/assets/Scss/pages/index.scss
+++ b/assets/Scss/pages/index.scss
@@ -5,9 +5,9 @@
 @import "../components/buttons";
 @import "../components/labels";
 @import "../components/inputs";
-@import "../layout/footer";
+@import "../components/footer";
+@import "../components/nav-bar";
 @import "../layout/header";
-@import "../layout/nav-bar";
 @import "../layout/section-one";
 @import "../layout/section-two";
 @import "../layout/video-modal";
