section three is added to the index page

--- a/assets/Scss/abstracts/_placeholders.scss
+++ b/assets/Scss/abstracts/_placeholders.scss
@@ -10,3 +10,9 @@
     color: $clr-dark;
     font-weight: 800;
 }
+
+%resume-design {
+    border-radius: 4px;
+    box-shadow: 0 4px 16px rgba(15, 20, 31, .16);
+    width: 51.1%;
+}
