--- a/assets/Scss/pages/index.scss
+++ b/assets/Scss/pages/index.scss
@@ -10,4 +10,5 @@
 @import "../layout/header";
 @import "../layout/section-one";
 @import "../layout/section-two";
+@import "../layout/section-three";
 @import "../layout/video-modal";
