--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -18,6 +18,12 @@
   font-weight: 800;
 }
 
+.section-three-r .resume-img-three, .section-three-r .resume-img-two, .section-three-r .resume-img-one {
+  border-radius: 4px;
+  box-shadow: 0 4px 16px rgba(15, 20, 31, 0.16);
+  width: 51.1%;
+}
+
 /*----- text colors -----*/
 .text-blue {
   color: #1A91F0;
@@ -78,6 +84,10 @@
 
 .bg-green {
   background-color: #084C41;
+}
+
+.bg-blue-shade {
+  background-color: #282b8f;
 }
 
 /*----- text aligns---- */
@@ -411,6 +421,12 @@ a {
   font-weight: 800;
 }
 
+.section-three-r .resume-img-three, .section-three-r .resume-img-two, .section-three-r .resume-img-one {
+  border-radius: 4px;
+  box-shadow: 0 4px 16px rgba(15, 20, 31, 0.16);
+  width: 51.1%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -729,6 +745,63 @@ a {
   margin: 0.9rem 0;
 }
 
+.section-three {
+  color: #fff;
+  padding: 130px 0px;
+}
+.section-three-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.section-three-l {
+  width: 50%;
+}
+.section-three-l .left-label {
+  color: #f9ba44;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1.3px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.section-three-l .left-title {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 50px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 90%;
+}
+.section-three-l .left-description {
+  margin-bottom: 30px;
+  font-size: 18px;
+  width: 85%;
+}
+.section-three-r {
+  flex-shrink: 0;
+  position: relative;
+  width: 48%;
+}
+.section-three-r .resume-img-one {
+  position: absolute;
+  left: 0;
+  bottom: -120px;
+}
+.section-three-r .resume-img-two {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-three-r .resume-img-three {
+  position: absolute;
+  top: -120px;
+  right: 0;
+}
+
 .modal {
   max-width: 200px;
 }
@@ -787,6 +860,12 @@ a {
   line-height: 1.4;
   color: #1e2532;
   font-weight: 800;
+}
+
+.section-three-r .resume-img-one, .section-three-r .resume-img-two, .section-three-r .resume-img-three {
+  border-radius: 4px;
+  box-shadow: 0 4px 16px rgba(15, 20, 31, 0.16);
+  width: 51.1%;
 }
 
 * {
