--- a/assets/Scss/layout/__layout.-dir.scss
+++ b/assets/Scss/layout/__layout.-dir.scss
@@ -1,6 +1,7 @@
 @import "./video-modal";
 @import "./section-one";
 @import "./section-two";
+@import "./section-three";
 @import "./cv-form-block";
 @import "./cv-form-header";
 @import "./cv-preview";
